--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Check parking
         run: |
-          python check_parking.py
+          python check_parking.py > output.txt
       - uses: cinotify/github-action@main
         with:
           to: 'tomcbaskin@gmail.com'
           subject: 'check'
-          body: '<em>This is a notification from GitHub actions. Test 1 </em>'
+          body: output.txt + '<em>This is a notification from GitHub actions. Test 1 </em>'
           type: 'text/html'
           # attachment: 'artifacts.zip'
