--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -31,7 +31,7 @@ jobs:
         if: ${{ steps.set_result.outputs.my_output != 'none' }}
         uses: cinotify/github-action@main
         with:
-          to: 'tessalindley@gmail.com'
+          to: 'tomcbaskin@gmail.com'
           subject: 'check'
           body: "${{ steps.set_result.outputs.my_output }}"
           type: 'text/html'
