--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Brighton Weekend Parking Checker
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # every 5 minutes
+    # - cron: "*/5 * * * *"   # every 5 minutes
   workflow_dispatch:
 
 jobs:
